[tool.poetry]
name = "langchain-ice-breaker"
version = "0.1.0"
description = "Langchain sample usecase application"
authors = ["nikhillondhe9 <nikhillondhe9@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
